# nlw-rocketset

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py
nlw_rocketset/: run_raw.py
nlw_rocketset/controllers/: tag_creator_controller.py
nlw_rocketset/drivers/: barcode_handler.py
nlw_rocketset/errors/: error_handler.py
nlw_rocketset/routes/: tag_routes.py
nlw_rocketset/server/: server.py
nlw_rocketset/validators/: tag_creator_validator.py
nlw_rocketset/views/: tag_creator_view.py
nlw_rocketset/views/http_types/: http_request.py
tests/: test_tag_creator_controller.py  test_tag_creator_validator.py
