[tool.poetry]
name = "nlw-rocketset"
version = "0.1.0"
description = ""
authors = ["RWallan <3am.richardwallan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
flask = "^3.0.2"
python-barcode = "^0.15.1"
pillow = "^10.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"
ruff = "^0.2.1"
taskipy = "^1.12.2"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
profile = "black"

[tool.ruff]
line-length = 70

[tool.pytest.ini_options]
pythonpath = "."

[tool.taskipy.tasks]
lint = "ruff . && black --check . --diff && isort --check . -diff"
format = "black . && isort ."
run = ""
pre_test = "task lint"
test = "pytest -s -x --cov=nlw_rocketset -vv"
post_test = "coverage html"
